# Certificados_Ariel_Riello

./: README.md
Bootcamp_Banco_PAN_Java_Developer/: README.md
CodeCamp_Fortaleza_dos_CodeMiners/: README.md
CodeCamp_Fortaleza_dos_CodeMiners/03_Enfrentando_o_Boss_Overfitting/: README.md  main.c
CodeCamp_O_Vale_do_Jacaranda_Dourado/: README.md
Formacao_Machine_Learning_Specialist/: README.md
Formacao_Python_Developer/: README.md
Formacao_Python_Developer/Desafios_de_Projeto/08_Consumindo_API_Twitter/: docker-compose.yml  main.py  pyproject.toml
Formacao_Python_Developer/Desafios_de_Projeto/08_Consumindo_API_Twitter/src/: connection.py  responses.py  secrets.py  services.py
Geracao_Tech_Unimed-BH_Ciencia_de_Dados/: README.md
Geracao_Tech_Unimed-BH_Ciencia_de_Dados/01_Desafios_Iniciais/: 01_Desafio_de_Codigo.py  02_Desafio_de_Codigo.py  03_Desafio_de_Codigo.py
Geracao_Tech_Unimed-BH_Ciencia_de_Dados/02_Analise_de_Dados_Python_Pandas/: Dengue_Botucatu_SP.csv  Projeto_Dengue_Btu_Analise.py  README.md
Geracao_Tech_Unimed-BH_Ciencia_de_Dados/03_Desafios_Intermediarios/: 01_Desafio_de_Codigo.py  02_Desafio_de_Codigo.py  03_Desafio_de_Codigo.py
Geracao_Tech_Unimed-BH_Ciencia_de_Dados/05_COVID_19/: Dados_COVID_Btu.csv  (+2 more)
HarvardX_CS50W/: README.md
Introducao_Hacking_Pentest_Solyd/: README.md
NTT_DATA_Eng_de_Dados_Python/: README.md
Pensamento_Critico_E_Resolução_de_Problemas/: 3_1_Metacognicao.md
Potencia_Tech_iFood_Programacao_do_Zero/: README.md
Santander_Bootcamp_Ciencia_de_Dados_Python/: README.md
Squadio_Python_Data_Analytics/: README.md
(+466 files in other folders)
